# csv-summarizer

./: .gitmodules  CMakeLists.txt  README.md
src/core/: csvsum.h  csvsum_base.h  full_csvsum.h  sample_csvsum.h
src/examples/: main  main.cpp  test.csv  test2.csv
src/main/: main.cpp
test/: unittest_csvsum.h  unittest_full_pass.h  unittest_main.cpp  unittest_sample.h
test/data/: quoted_escaped.csv
